--- a/src/styles/myStyles.scss
+++ b/src/styles/myStyles.scss
@@ -122,7 +122,7 @@ select {
             border-bottom: 1px solid #dddddddd;
             &:hover {
               font-weight: 500;
-              color: darken($maincolor, 50%) !important;
+              color: $maincolor !important;
               background-color: lighten($maincolor,45%) !important;
             }
         }
@@ -198,6 +198,7 @@ form {
   }
   .input_field {
     width: 300px;
+    max-width: 80%;
     outline: none;
     font-size: 15px;
     border: 1px solid $maincolor;
@@ -213,6 +214,7 @@ form {
   color: #fff;
   background-color: lighten($maincolor,25%);
   width: 150px;
+  max-width: 50%;
   padding: 5px;
   margin: 0 auto;
   margin-bottom: 30px;
@@ -225,6 +227,38 @@ form {
   }
 }
 
+.cont {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.lds-dual-ring {
+  margin: auto;
+  width: 80px;
+  height: 80px;
+}
+.lds-dual-ring:after {
+  content: " ";
+  display: block;
+  width: 64px;
+  height: 64px;
+  margin: 8px;
+  border-radius: 50%;
+  border: 6px solid $maincolor;
+  border-color: $maincolor transparent $maincolor transparent;
+  animation: lds-dual-ring 1.2s linear infinite;
+}
+@keyframes lds-dual-ring {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
 @media screen and (max-width: 1010px) {
     .container-inner {
         display: flex;
@@ -235,4 +269,14 @@ form {
     .container {
         width: 40%;
     }
+}
+
+@media (max-width: 420px) {
+  .form-group {
+    flex-direction: column;
+    align-items: center;
+    label {
+      margin-bottom: 5px;
+    }
+  }
 }
