--- a/src/styles/myStyles.scss
+++ b/src/styles/myStyles.scss
@@ -83,15 +83,18 @@ select {
 }
 
 .container {
-    width: 100vw !important;
-}
-
-.container-inner {
+    width: 80%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     margin: auto;
+}
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .content-table {
@@ -154,19 +157,25 @@ select {
 .addButton {
     line-height: 1;
     display: inline-block;
-    font-size: 1em;
+    font-size: 0.9em;
     text-decoration: none;
+    text-align: center;
     color: #fff;
     background-color: lighten($maincolor,25%);
     padding: 10px;
     margin-bottom: -10px;
     margin-top: 25px;
     border-radius: 10px;
+    width: 26%;
     &:hover {
         background-color: $maincolor;
         text-decoration: none;
         color: #fff;
     }
+}
+
+.apexchart {
+  margin-top: 50px;
 }
 
 form {
@@ -250,6 +259,24 @@ form {
   border-color: $maincolor transparent $maincolor transparent;
   animation: lds-dual-ring 1.2s linear infinite;
 }
+
+.alert {
+  padding: 20px;
+  background-color: #C3CC93; /* Red */
+  color: white;
+  margin: 0 30px 15px 30px;
+  .closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: right;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+}
+
 @keyframes lds-dual-ring {
   0% {
     transform: rotate(0deg);
@@ -260,19 +287,17 @@ form {
 }
 
 
-@media screen and (max-width: 1010px) {
-    .container-inner {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-    }
+@media screen and (max-width: 1290px) {
     .container {
-        width: 40%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      width: 80%;
     }
 }
 
-@media (max-width: 555px) {
+@media (max-width: 600px) {
   .form-group {
     flex-direction: column;
     align-items: center;
@@ -280,4 +305,40 @@ form {
       margin-bottom: 5px;
     }
   }
+  .table-container {
+    min-width: 200px;
+    font-size: 0.5em;
+  }
+  table, thead, tbody, th, td, tr { 
+		display: block; 
+	}
+
+  thead tr { 
+		position: absolute;
+		top: -9999px;
+		left: -9999px;
+	}
+  td { 
+		/* Behave  like a "row" */
+		border: none;
+		border-bottom: 1px solid #eee; 
+		position: relative;
+	}
+
+  td:before { 
+		/* Now like a table header */
+		position: absolute;
+		/* Top/left values mimic padding */
+		top: 11px;
+    left: 10px;
+		width: 45%; 
+		padding-right: 40px; 
+		white-space: nowrap;
+	}
+
+  td:nth-of-type(1):before { content: "Date"; }
+	td:nth-of-type(2):before { content: "RUB rate"; }
+	td:nth-of-type(3):before { content: "USD rate"; }
+  td:nth-of-type(4):before { content: "EUR rate"; }
+
 }
