--- a/src/styles/myStyles.scss
+++ b/src/styles/myStyles.scss
@@ -190,7 +190,10 @@ form {
     padding: 15px;
     color: white;
     letter-spacing: 2px;
-    margin-bottom: 50px;
+  }
+
+  .form-group:first-of-type {
+    margin-top: 50px;
   }
 }
 
